// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane R3 — the phone is unchanged (golden) deliveries add sheet (header Add), iOS 390 1`] = `
{
  "lines": 465,
  "sha256": "3ba70cf251cfe45b61622a78e80738db34686f8b7f4bede81fc2d1cf52a27483",
}
`;

exports[`lane R3 — the phone is unchanged (golden) deliveries at rest, iOS 390 1`] = `
{
  "lines": 465,
  "sha256": "80371eb8fc97aa61d964098f30875dc0276bb2229ee4cc662d61f9602fcb818e",
}
`;

exports[`lane R3 — the phone is unchanged (golden) deliveries at rest, web 390 1`] = `
{
  "lines": 465,
  "sha256": "80371eb8fc97aa61d964098f30875dc0276bb2229ee4cc662d61f9602fcb818e",
}
`;

exports[`lane R3 — the phone is unchanged (golden) deliveries at rest, web 768 1`] = `
{
  "lines": 465,
  "sha256": "80371eb8fc97aa61d964098f30875dc0276bb2229ee4cc662d61f9602fcb818e",
}
`;

exports[`lane R3 — the phone is unchanged (golden) deliveries receive sheet (receive-<id>), iOS 390 1`] = `
{
  "lines": 493,
  "sha256": "b614dd59a2bbe7ea51c82ae0342f31fa8cd45e8e2d35300277026a5fab77457e",
}
`;

exports[`lane R3 — the phone is unchanged (golden) documents at rest, iOS 390 1`] = `
{
  "lines": 481,
  "sha256": "90985c70008509c202effb4afcf2afc43d9df1238a754a2d638a25f02f1bde7b",
}
`;

exports[`lane R3 — the phone is unchanged (golden) documents at rest, web 390 1`] = `
{
  "lines": 481,
  "sha256": "90985c70008509c202effb4afcf2afc43d9df1238a754a2d638a25f02f1bde7b",
}
`;

exports[`lane R3 — the phone is unchanged (golden) documents at rest, web 768 1`] = `
{
  "lines": 481,
  "sha256": "90985c70008509c202effb4afcf2afc43d9df1238a754a2d638a25f02f1bde7b",
}
`;

exports[`lane R3 — the phone is unchanged (golden) leads at rest, iOS 390 1`] = `
{
  "lines": 605,
  "sha256": "f0e69900aafa11e3e7445a5a1f365ae64c9c6fccfe91231ddde5ca0a0ab572a7",
}
`;

exports[`lane R3 — the phone is unchanged (golden) leads at rest, web 390 1`] = `
{
  "lines": 605,
  "sha256": "f0e69900aafa11e3e7445a5a1f365ae64c9c6fccfe91231ddde5ca0a0ab572a7",
}
`;

exports[`lane R3 — the phone is unchanged (golden) leads at rest, web 768 1`] = `
{
  "lines": 605,
  "sha256": "f0e69900aafa11e3e7445a5a1f365ae64c9c6fccfe91231ddde5ca0a0ab572a7",
}
`;
